add icon and color config

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,7 @@
 name: "DECAF Webapps Deployment"
 description: "Deploys DECAF Web Apps"
+icon: "arrow-up-right"
+color: "orange"
 outputs:
   segment:
     description: "The segment of the deployment"
