get deployment subdomain as input

--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,10 @@ inputs:
   version:
     description: "Deployment from a tag or version"
     required: false
+  deployment_subdomain:
+    description: "Subdomain part for the app URL. The xxx part where the address is xxx.decafhub.com. Default is sandbox.dev"
+    required: false
+    default: "sandbox.dev"
   remote_host:
     description: "The remote host"
     required: true
@@ -76,6 +80,7 @@ runs:
       uses: actions/github-script@v6
       env:
         DEPLOY_URLS: ${{steps.build.outputs.urlpaths}}
+        APP_SUBDOMAIN: ${{ inputs.deployment_subdomain }}
       if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'reopened') }}
       with:
         script: |
@@ -84,5 +89,5 @@ runs:
             repo: { owner, repo },
           } = context;
           process.env.DEPLOY_URLS.split('||').forEach(path => {
-            github.rest.issues.createComment({ issue_number, owner, repo, body: `🚀  Deploy Preview: https://sandbox.dev.decafhub.com${path}` });
+            github.rest.issues.createComment({ issue_number, owner, repo, body: `🚀  Deploy Preview: https://${process.env.APP_SUBDOMAIN}.decafhub.com${path}` });
           });
