--- a/action.yml
+++ b/action.yml
@@ -46,6 +46,10 @@ inputs:
   sentry_token:
     description: "The sentry token to upload the sourcemaps"
     required: false
+  build_folder:
+    description: "The build folder"
+    required: false
+    default: "build"
 runs:
   using: "composite"
   steps:
@@ -75,6 +79,7 @@ runs:
         INPUT_SENTRY_ORG: ${{ inputs.sentry_org }}
         INPUT_SENTRY_PROJECT: ${{ inputs.sentry_project }}
         INPUT_SENTRY_TOKEN: ${{ inputs.sentry_token }}
+        INPUT_BUILD_FOLDER: ${{ inputs.build_folder }}
 
     - name: "Comment on PR"
       uses: actions/github-script@v6
